[gd_scene load_steps=2 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="Script" path="res://Scenes/Systems/Inventory/ItemSlot.gd" id="1_0"]

[node name="ItemSlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
expand_mode = 1
stretch_mode = 5

[node name="ItemNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
text = "Item Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="TooltipPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -20.0
visible = false

[node name="TooltipLabel" type="RichTextLabel" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
bbcode_enabled = true
text = "Tooltip text here"
fit_content = true
